apps/swadestack/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swadestack-staging
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
